<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation|screenSize|keyboardHidden"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#2FC9EC"
        android:gravity="top"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:clickable="true"
            android:contextClickable="false"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/enter_a_contacts_name"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/contact_picture_placeholder" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/phone"
                        android:textColor="#50A7B3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#728C93" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="0.60"
                            android:gravity="left"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/phoneField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:allowUndo="true"
                                android:autoLink="phone"
                                android:autoText="false"
                                android:clickable="true"
                                android:contextClickable="false"
                                android:digits="0123456789+"
                                android:editable="true"
                                android:elegantTextHeight="true"
                                android:enabled="true"
                                android:focusable="true"
                                android:hint="@string/enter_phone_number"
                                android:inputType="phone"
                                android:phoneNumber="true"
                                android:singleLine="true"
                                android:textColor="#696969"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/callButton"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:contentDescription="@string/call"
                                android:src="@drawable/call"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/phoneField"
                                android:layout_marginStart="37dp" />

                            <ImageView
                                android:id="@+id/smsButton"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/sms"
                                android:src="@drawable/sms"
                                android:layout_alignBottom="@+id/phoneField"
                                android:layout_toEndOf="@+id/callButton"
                                android:layout_alignTop="@+id/callButton" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"

                        android:allowUndo="true"
                        android:clickable="true"
                        android:contextClickable="false"
                        android:enabled="true"
                        android:focusable="true"
                        android:text="@string/address"
                        android:textColor="#50A7B3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#728C93" />

                    <EditText
                        android:id="@+id/addressField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:allowUndo="true"
                        android:clickable="true"
                        android:contextClickable="false"
                        android:editable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/enter_contact_s_address"
                        android:maxLines="3"
                        android:selectAllOnFocus="true"
                        android:textColor="#696969"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/birthday"
                        android:textColor="#50A7B3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#728C93" />

                    <EditText
                        android:id="@+id/birthdayField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/enter_contact_s_birthday"
                        android:inputType="date"
                        android:textColor="#696969"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/first_met"
                        android:textColor="#50A7B3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#728C93" />

                    <Button
                        android:id="@+id/geoCords"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#696969"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>